[package]
name = "tumor_model"
version = "0.1.0"
edition = "2018"
authors = ["Petter Säterskog <petter.saterskog@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
ndarray-stats = "0.5.0"
ndrustfft = "0.2.1"
rand = "0.8.4"
rand_distr = "0.4.2"
rand_pcg = "0.3.1"
approx = "0.5.0"
